--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>cn.com.onlinetool</groupId>
     <artifactId>fast-pay-sdk</artifactId>
     <!-- 重大发布.小版本.增量版本-版本标识 -->
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -92,11 +92,11 @@
             <version>${slf4j}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-simple</artifactId>-->
+<!--            <version>${slf4j}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.google.guava</groupId>
