--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit>4.12</junit>
+        <junit-jupiter-api>5.5.0</junit-jupiter-api>
         <projectlombok.lombok>1.18.8</projectlombok.lombok>
         <httpcomponents.httpclient>4.5.9</httpcomponents.httpclient>
         <slf4j>1.7.26</slf4j>
@@ -63,6 +64,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter-api}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
